force-app/main/default/objects/Quote_Line_Item__c/fields/Billable_Type__c.field-meta.xml
<CustomField>
    <fullName>Billable_Type__c</fullName>
    <label>Billable Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
                <default>true</default>
                <label>Billable</label>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>