force-app/main/default/objects/Quote_Line_Item__c/fields/Builder_Pricing_Line__c.field-meta.xml
<CustomField>
    <fullName>Builder_Pricing_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The BMG pricing book line that sourced the Unit_Price__c for this line item. Provides full audit trail from contracted rates to quote.</description>
    <label>BMG Pricing Line</label>
    <referenceTo>Builder_Pricing_Line__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Lines_Pricing_Line</relationshipName>
    <type>Lookup</type>
</CustomField>