force-app/main/default/objects/Quote_Line_Item__c/fields/Determination__c.field-meta.xml
<CustomField>
    <fullName>Determination__c</fullName>
    <label>Determination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>