force-app/main/default/objects/Quote_Line_Item__c/fields/Item_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Item_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cost book item for this line. Provides Standard_Cost__c for margin calculations.</description>
    <label>Item Catalog</label>
    <referenceTo>Item_Catalog__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Lines_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>