force-app/main/default/objects/Quote_Line_Item__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <label>Item Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>