force-app/main/default/objects/Quote_Line_Item__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>Total_Revenue__c - Total_Cost__c. Set by Apex trigger.</description>
    <label>Margin ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>