force-app/main/default/objects/Quote_Line_Item__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Quantity × Unit_Cost__c. Set by Apex trigger.</description>
    <label>Total Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>