force-app/main/default/objects/Quote_Line_Item__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <description>Quantity × Unit_Price__c. Set by Apex trigger.</description>
    <label>Total Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>