force-app/main/default/objects/Quote_Line_Item__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sf</fullName>
            </value>
            <value>
                <fullName>each</fullName>
            </value>
            <value>
                <fullName>cy</fullName>
            </value>
            <value>
                <fullName>hr</fullName>
            </value>
            <value>
                <fullName>lot</fullName>
            </value>
            <value>
                <fullName>linear ft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>