force-app/main/default/objects/Quote_Line_Item__c/fields/Warranty_Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Coverage_Type__c</fullName>
    <label>Warranty Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sod 60 Day Standard</fullName>
            </value>
            <value>
                <fullName>Sod Extended</fullName>
            </value>
            <value>
                <fullName>Plant 1 Year Standard</fullName>
            </value>
            <value>
                <fullName>Plant Extended</fullName>
            </value>
            <value>
                <fullName>Hardscape 2 Year Standard</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Aqua Equipment</fullName>
            </value>
            <value>
                <fullName>Out of Period</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>