force-app/main/default/objects/Quote_Line_Item__c/validationRules/Billable_Requires_Unit_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Billable_Requires_Unit_Price</fullName>
    <active>true</active>
    <description>Billable line items require unit price greater than 0</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),
    (AND(
        ISPICKVAL(Determination__c, &quot;Billable&quot;),
        OR(ISBLANK(Unit_Price__c), Unit_Price__c &lt;= 0)
    ))
)</errorConditionFormula>
    <errorDisplayField>Unit_Price__c</errorDisplayField>
    <errorMessage>Billable line items require unit price</errorMessage>
</ValidationRule>